# easy_dc_rust

./: .gitignore  Cargo.toml  README.md  n_order.txt  timing_order.txt
imgs/: txt.py
src/: graph_960  graph_orders.txt  main.rs  solution_12320.csv
src/compare/: absumv.rs  is_valid_edge.rs  mod.rs  reflect_solution.rs  shrink.rs
src/data/: g_10640.rs  g_1320.rs  g_160.rs  g_1760.rs  g_2288.rs  g_280.rs  g_2912.rs  g_32.rs  g_3640.rs  g_448.rs  g_4480.rs  g_5440.rs  g_6528.rs  g_672.rs  g_7752.rs  g_80.rs  g_9120.rs  g_960.rs  mod.rs
src/data/adjacencies/: ADJ1320.rs  adj160.rs  adj32.rs  adj8.rs  adj80.rs  mod.rs
src/data/vertices/: mod.rs  verts32.rs
src/enums/: enums.rs
src/graph/: certify.rs  check.rs  convert.rs  cycle.rs  cycle_var.rs  defs.rs  gens.rs  io.rs  make.rs  measure.rs  mod.rs  operators.rs  shrink.rs  shrink_ref.rs  solve.rs  structs.rs  translate.rs  try_versions.rs  types.rs  utils.rs  weave.rs  weaver.rs
src/graph/make/: adjacency_edges.rs  mod.rs  (+9 more)
src/graphs/: graph32.rs  graphvects.rs  make.rs  make_weights.rs  mod.rs  stratify.rs  translate.rs
src/info/: certify.rs  grade.rs
src/macros/: macros.rs
src/make_discocube.rs/: conceive.rs
src/operators/: color.rs  cut.rs  flip.rs  mod.rs  operators.rs  rotate.rs  solve.rs  spin.rs  spool.rs  warp.rs  weave.rs  wind.rs
src/structs/: cycle.rs  cycle_i16.rs  cycle_ref.rs  edge_array.rs  frozenedge.rs  mod.rs  v2d_general.rs  vector.rs  vector2d.rs  vector3d.rs  vector3dref.rs  vector_i16.rs
src/types/: types.rs
src/utils/: iters.rs  macros.rs  mod.rs  operators.rs  time.rs
(+45 files in other folders)
