[package]
name = "hamcycle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common_macros = "0.1.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
ndarray = "0.15.6"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.1", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.94"

[profile.release]
debug = true
lto = true
opt-level = 3



